assets/custom_menu_style.css
/* ... */
body.single-post .site-header .logo:after {
    content: unset;
}

body.single-post .site-header.scrolled .logo {
    position: relative;
    width: 40px;
    height: 40px;
    overflow: hidden;
    background: 0 0;
    transform: translateY(30px) !important;
}

body.single-post .site-header .logo:hover:before {
    opacity: 0.8;
}


@media only screen and (max-width: 992px) {
    body.single-post .site-header .mobmenu span {
        background: #7c21cc;
    }

    body.single-post .site-header.scrolled .logo {
        transform: translateY(17px) scale(1) !important;

    }

    body.single-post .site-header .logo {
        width: 65px!important;
        height: 40px!important;
        background-image: unset !important;
    }

    body.single-post .site-header .logo {
        max-width: 54px;
    }

    body.single-post .site-header .logo:hover:before {
        opacity: 1 !important;
    }

    body.single-post .site-header .mobmenu span:after, body.single-post .site-header .mobmenu span:before {
        background-color: #7c21cc !important;
    }

    /* Mobile menu */
    #site-navigation {
        border-top: 1px solid #E3E3E3;
    }
    .site-header ul.menu {
        flex-direction: column;
    }
    .site-header .main-navigation li.active > a {
        border: none;
    }
    .site-header .main-navigation li.menu-item-has-children.active {
        padding: 0 !important;
    }

    .site-header .main-navigation li.menu-item-has-children.active .sub-menu {
        width: 100%;
        display: flex;
        flex-direction: column;
    }

    .site-header .main-navigation li.menu-item-has-children .sub-menu li {
        height: unset !important;
    }

    ul.sub-menu li:first-child {
        margin-top: 0 !important;
        padding-top: 0 !important;
    }
    
}

/** SubMenuWrapper **/

.site-header .subMenuWrapper{
    position: relative;
    top: 110px;
    max-height: 320px !important;
    background-color: #fff;
    z-index: 0;
    border: 1px solid #E9E5EE;
    opacity: 0;
    visibility: hidden;
    box-shadow: 0px 20px 60px rgba(0, 0, 0, 0.08);
    max-width: 910px;
    max-height: 370px !important;
    border-radius: 0 0 15px 15px;
    display: flex;
    padding: 10px;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

ul.nested-menu {
    display: flex;
    flex-direction: column;
    width: 100%;
    padding: 52px 40px 20px 40px !important;
}

ul.nested-menu-has-children{
    display: flex;
    flex-direction: row !important;
    width: 100%;
    padding: 0 !important;
}

ul.nested-menu > li {
    margin-bottom: 5px;
    padding-bottom: 5px;
}

ul.nested-menu > li.menu-item-has-children {
    padding: 52px 40px 20px 40px;
    height: 100%;
    max-height: 300px;
}

ul.nested-menu li.menu-item-has-children > a {
    font-size: 15px;
    font-weight: 700;
}

ul.nested-menu li.menu-item-has-children > a:hover  {
    color: #000;
    text-decoration: none !important;
}

ul.sub-menu li {
    margin-bottom: 5px;
    padding-bottom: 5px;
}

ul.sub-menu li:first-child {
    margin-top: 10px;
    padding-top: 10px;
}



ul.nested-menu a {
    padding: 20px 0 !important;
    color: #000;
    font-size: 18px;
    text-decoration: none;
}

ul.nested-menu a:hover {
    color: #7C21CC;
    text-decoration: underline;
}


ul.nested-menu > li.menu-item-has-children:nth-child(even) {
    background-color: #F8F6FE; 
}

img.menu-ad-image {
    border-radius: 0 0 15px;
}

.site-header .subMenuWrapper .subMenuIntroText {
    max-width: 910px;
    margin: 0 auto;
}


/* .site-header .subMenuWrapper:after{
    content: '';
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    height: 20px;
    background-color: #fff;
    box-shadow: 0px 0px 3px 6px rgba(0,0,0,0.16);
    filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.16)); 
    z-index: -2;
} */

.site-header .subMenuWrapper{
    transition: unset;
}

.site-header .subMenuWrapper.active{
    visibility: visible;
	opacity: 1;
    transition: unset;
	/* animation-name: fadeIn; */
	/* animation-iteration-count: 1;
	animation-timing-function: ease-in;
	animation-duration: 0.2s; */
}

.site-header .subMenuWrapper *{
    transition: unset;
}

.site-header .subMenuWrapper .subMenuIntroText .subMenuTitle{
    font-family: "Open Sans";
    font-weight: normal;
    font-size: 20px;
    letter-spacing: 0.02em;
    text-align: left;
    color: #7132c4;
    margin-bottom: 9px;
}

.site-header .subMenuWrapper .subMenuIntroText .subMenuText{
    max-width: 250px;
    font-family: "Open Sans";
    font-weight: normal;
    font-size: 18px;
    letter-spacing: 0.02em;
    text-align: left;
    color: #000;    
}


/** Menu Book Header **/

.site-header ul.menu {
    pointer-events: none;
}

.site-header ul.menu.loaded{
    pointer-events: all;
}

.site-header ul.menu > li > a#bookDemo{
    border-radius: 15px;
    background-color: #F91B61;
    padding: 0 40px !important;
    height: 52px;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: -25px;
    font-size: 18px;
    font-weight: 500;
    border: 2px solid #F91B61 !important;
}

.site-header ul.menu > li > a#bookDemo:hover{
    border: 2px solid #f91c61 !important;
    background-color: #fff !important;
    color: #f91c61 !important;
}

.site-header ul.menu > li > a#bookDemoMobile{
    height: 31px;
    border-radius: 12px;
    background-color: #f91c61;
    border: 2px solid #f91c61 !important;
    text-align: center;
    color: #fff !important;
}

.site-header ul.menu > li > a#bookDemoMobile{
    margin: 30px auto 0 auto !important;
}

.site-header ul.menu > li > a#bookDemo:hover{
    border: 2px solid #f91c61 !important;
    background-color: #fff !important;
    color: #f91c61 !important;
}

@media only screen and (max-width: 1530px) {
    .menu-main-menu-container {
        padding-right: 20px;
    }

}

@media only screen and (min-width: 1530px) {
    .site-header ul.menu > li > a#bookDemo{
        min-width: 180px;
    }
}
/* ... */

